--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/assurance?serverTimezone=UTC
 spring.datasource.username=assurance
 spring.datasource.password=assurance
 spring.freemarker.cache=false
+springdoc.swagger-ui.path=/swagger-ui.html
