Ajout du swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/assurance?serverTimezone=UTC
 spring.datasource.username=assurance
 spring.datasource.password=assurance
 spring.freemarker.cache=false
-springdoc.swagger-ui.path=/swagger-ui.html
+springfox.documentation.swagger-ui.enabled=true
+springfox.documentation.swagger-ui.path=/swagger-ui.html
