--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=assurance
 spring.freemarker.cache=false
 springfox.documentation.swagger-ui.enabled=true
 springfox.documentation.swagger-ui.path=/swagger-ui.html
+
+
+springdoc.api-docs.title=Groupe1
